# spaix

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .includes.imp  COPYING  NEWS  README.md  meson.build  meson_options.txt
.reuse/: dep5
include/: .clang-tidy
include/spaix/: Comparisons.hpp  Config.hpp  ConstStaticVectorView.hpp  DataIterator.hpp  DataNode.hpp  DataPlacement.hpp  EntryIterator.hpp  FanoutConfiguration.hpp  Iterator.hpp  LinearInsertion.hpp  LinearSplit.hpp  NodeAllocationPolicy.hpp  Operations.hpp  PageConfiguration.hpp  Point.hpp  QuadraticInsertion.hpp  QuadraticSplit.hpp  Queries.hpp  RTree.hpp  RTree.ipp  Range.hpp  Rect.hpp  SideChooser.hpp  Split.hpp  SplitParts.hpp  SplitSeeds.hpp  StaticVector.hpp  StaticVectorView.hpp  TreeRange.hpp  concepts.hpp  contains.hpp  distribute.hpp  draw_dot.hpp  draw_svg.hpp  empty.hpp  everything.hpp  expansion.hpp  intersection.hpp  intersects.hpp  sizes.hpp  (+6 more)
include/spaix/detail/: DatEntryType.hpp  DirectoryNode.hpp  EntryTracker.hpp  Index.hpp  NodeEntry.hpp  NodePointerEntry.hpp  attributes.hpp  distribute.hpp  entry.hpp  meta.hpp  power.hpp
include/spaix/heterox/: Comparisons.hpp  Operations.hpp  Point.hpp  Queries.hpp  Rect.hpp  detail.hpp
include/spaix/heterox/detail/: meta.hpp
include/spaix/homox/: Comparisons.hpp  Operations.hpp  Point.hpp  Queries.hpp  Rect.hpp
include/spaix/search/: Everything.hpp  Exactly.hpp  Touching.hpp  Within.hpp  everything.hpp  touching.hpp  within.hpp
include/spaix/traverse/: everything.hpp  touching.hpp  within.hpp
meson/suppressions/: meson.build
meson/warnings/: meson.build
scripts/: benchmark.py
test/: .clang-tidy  BenchParameters.hpp  Distribution.hpp  Scalar.hpp  TestRect.hpp  bench_RTree.cpp  bench_boost_rtree.cpp  bench_spaix_rtree.cpp  benchmark_RTree  check.hpp  draw_tree.cpp  meson.build  options.hpp  test_build.cpp  tst_Point.cpp  tst_RTree  tst_RTree.cpp  tst_Rect  tst_Rect.cpp  tst_contains.cpp  tst_intersection.cpp  tst_intersects.cpp  tst_union.cpp  tst_volume.cpp  write_row.hpp
test/benchmark/: .clang-tidy  bench_boost_rtree.cpp  bench_spaix_rtree.cpp  meson.build
test/headers/: .clang-tidy  meson.build  test_headers.cpp
test/include/spaix_test/: BenchParameters.hpp  Distribution.hpp  Scalar.hpp  TestRect.hpp  check.hpp  hetero2.hpp  homo2.hpp  options.hpp  write_row.hpp
test/lint/: meson.build
test/tools/: .clang-tidy  draw_dot.hpp  draw_svg.hpp  draw_tree.cpp  meson.build
test/unit/: .clang-tidy  meson.build  test_Point.cpp  test_RTree.cpp  test_Rect.cpp  test_contains.cpp  test_expansion.cpp  test_glm.cpp  test_intersection.cpp  test_intersects.cpp  test_unify.cpp  test_union.cpp  test_volume.cpp  tst_RTree.cpp  tst_intersects.cpp  tst_volume.cpp
warnings/: meson.build
