option(
  'benchmarks',
  type: 'feature',
  yield: true,
  description: 'Build benchmarks',
)

option(
  'boost',
  type: 'combo',
  choices: ['yes', 'no', 'auto'],
  description: 'Build boost benchmarking program',
)

option(
  'lint',
  type: 'boolean',
  value: false,
  yield: true,
  description: 'Run code quality checks',
)

option(
  'tests',
  type: 'feature',
  yield: true,
  description: 'Build tests',
)

option(
  'tools',
  type: 'boolean',
  yield: true,
  description: 'Build command line tools',
)
