# Copyright 2020-2026 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR GPL-3.0-only

option('benchmarks', type: 'feature', description: 'Build benchmarks')
option('boost', type: 'feature', description: 'Build boost benchmark')
option('glm', type: 'feature', description: 'Build glm test')
option('install', type: 'feature', description: 'Install project')
option('lint', type: 'boolean', value: false, description: 'Test code quality')
option('tests', type: 'feature', description: 'Build tests')
option('tools', type: 'feature', description: 'Build test command-line tools')
